--- a/css/style.css
+++ b/css/style.css
@@ -1,256 +1,22 @@
+@import "./global/global.css";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
+@import "./utilidades/cores.css" ;
 
-h1, h2, h3, h4, h5, h6, p, ul, li , body , a{
-    margin: 0;
-}
+@import "./utilidades/fontes.css" ;
 
-a {
-    text-decoration: none;
+@import "./utilidades/componentes.css";
 
-}
-
-body {
-    height: 1000px;
-}
+@import "./global/menu.css";
 
 
-li {
-    list-style: none;
-}
+@import "./home/introducao.css";
 
-img {
-    max-width: 100%;
-    display: block;
-}
-
-:root {
-    --c12: #000000;
-    --white: white;
-    --p1: #FFBB00;
-    --p5: #332200;
-    --c5:#B2B2B2;
-    --gradient: linear-gradient(#FFBF00, #F2A50C);
-    
-}
-
-.font-1-m {
-    font-family: Poppins;
-    font-weight: 500;
-    font-size: 1.125rem;
-    line-height: 1.3;
-}
-
-.font-1-xxl{
-    font-size: 4rem;
-    line-height: 1.125;
-    font-family: Poppins;
-}
-
-.font-2-m {
-    font-family: Roboto;
-    font-weight: 500;
-    font-size: 1.125rem;
-    line-height: 1.3; }
-
-.font-2-l{
-    font-size: 1.5rem;
-    line-height: 1.5;
-    font-family: Roboto;
-}
-
-.header {
-    background: var(--c12);
-}
-
-.container-menu {
-    max-width: 1200px;
-    padding: 20px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    
-}
-
-.header-menu {
-    display: flex;
-    gap: 40px;
-    flex-wrap: wrap;
-}
-
-.header-menu li{
-    color: white;
-    padding: 8px 12px;
-}
-
-.header-menu li a{
-    color: white;
-    
-}
-
-.header-menu li a::after{
-    content: '';
-    display: block;
-    width: 0%;
-    background-color: white;
-    height: 2px;
-    transition: 0.3s;
-
-}
-
-.header-menu li a:hover::after{
-    width: 100%;
-}
+@import "./home/bikes.css";
 
 
-@media (max-width:630px) {
-    .container-menu{
-        place-content: center;
-    }
 
-    .header-menu{
-        margin-top: 12px;
-        gap: 20px;
-        padding: 12px 16px;
-        border: 4px;
 
-    }
 
-    .header-menu li{
-        color: white;
-        background-color: #111111;
-    }
-}
 
-@media (max-width:400px){
-    .header-menu{
-        gap: 12px;
-        padding: 8px 12px;
 
-    }
-
-    .header-menu li a {
-        font-size: 0.8rem;
-    }
-}
-
-.main {
-    background: var(--c12);
-    box-shadow: inset 0 -120px rgb(255, 255, 255);
-}
-
-.container-main{
-    display: grid;
-    max-width: 1200px;
-    padding: 0 20px;
-    grid-template-columns: 1fr 1fr;
-    gap: 48px;
-    margin: 0 auto;
-   
-
-}
-
-.main-texto {
-    align-self: end;
-    box-sizing: border-box;
-    padding-bottom: 200px
-}
-
-.main-texto h1{
-    color: #FFFFFF;
-    margin-bottom: 32px;
-    
-}
-
-.ponto-amarelo {
-    color: var(--p1);
-}
-
-.main-texto p{
-    color: var(--c5);
-    margin-bottom: 20px;
-}
-
-.btn{
-    padding: 16px 32px;
-    background: var(--gradient);
-    color: var(--p5);
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-    display: inline-block;
-    font-family: Poppins;
-    font-weight: 500;
-    font-size: 1.125rem;
-    line-height: 1.3;
-    transition: 0.3s;
-    
-
-}
-
-.btn:hover{
-   background: linear-gradient(#f1c540, #ad7503)
-}
-
-.img-main{
-height: 100%;
-object-fit: cover;
-}
-
-@media (max-width: 1000px) {
-    .main-texto h1 {
-        font-size: 48px;
-        margin-bottom: 16px;
-        
-    }
-
-    
-    .main-texto p {
-        font-size: 1rem;
-        margin-bottom: 16px;
-    }
-}
-
-@media (max-width: 830px) {
-    .main-texto h1 {
-        font-size: 36px;
-        margin-bottom: 16px;
-        padding-top: 16px;
-    }
-}
-
-@media(max-width: 750px){
-    .container-main{
-        grid-template-columns: 1fr;
-    }
-
-    .main-texto{
-        padding-bottom: 0;
-    }
-
-    .main {
-
-        box-shadow: inset 0 -80px rgb(255, 255, 255);
-    }
-
-    .img-main{
-        height: auto;
-        width: 100%;
-    }
-}
-
-@media(max-width: 600px) {
-
-    .main {
-
-        box-shadow: inset 0 -50px rgb(255, 255, 255);
-    }
-
-    .btn {
-        padding: 12px 24px;
-        font-size: 1rem;
-        
-    }
-
-}
 
