--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,7 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
 
-h1, h2, h3, h4, h5, h6, p, ul, li , body , a{
+h1, h2, h3, h4, h5, h6, p, ul, li , body , a,blockquote{
     margin: 0;
+}
+
+ul {
+    padding: 0;
 }
 
 a {
@@ -10,7 +14,10 @@ a {
 }
 
 body {
-    height: 1000px;
+   
+    
+    color:#000000;
+    height: 4500px;
 }
 
 
@@ -21,4 +28,8 @@ li {
 img {
     max-width: 100%;
     display: block;
+}
+
+img[src$=".jpg"] {
+    border-radius: 4px;
 }
