--- a/css/utilidades/fontes.css
+++ b/css/utilidades/fontes.css
@@ -69,7 +69,7 @@ font: 400 0.85rem/1.35 'Roboto';
         font-size: 3rem;
     }
 
-    .font-2-l {
+    .font-2-l, .font-2-l-b {
         font-size: 1rem;
     }
 }
@@ -78,9 +78,16 @@ font: 400 0.85rem/1.35 'Roboto';
     .font-1-xxl {
         font-size: 2.25rem;
     }
+    .font-1-xl {
+        font-size: 1.5rem;
+    }
+
+    .font-1-l{
+        font-size: 1rem;
+    }
 }
 
-@media (max-width:400px){
+@media (max-width:450px){
     .font-1-m{
         font-size: 0.8rem;
     }
