--- a/css/home/bikes.css
+++ b/css/home/bikes.css
@@ -5,7 +5,7 @@
 .choose-bike h2 {
     max-width: 1200px;
     padding: 0 20px;
-    border-radius: border-box;
+    box-sizing: border-box;
     padding-bottom: 40px;
 }
 
