--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,5 @@
 @import "./contato/contato.css";
 @import "./utilidades/formulario.css";
 @import "./contato/endereco.css";
+
+@import "./orcamento/orcamento.css";
