--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -11,7 +11,7 @@
 
 .nosso-contato section{
     padding: 60px;
-    background-color: var(--c12);
+    background: var(--c12) url('../../img/icones/decoracao/dec4.svg') no-repeat bottom 40px left 40px;
     border-radius: 4px 0px 0px 4px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
@@ -80,7 +80,7 @@
 
        #formulario{
          padding: 60px;
-        background-color: white;
+        background: white url('../../img/icones/decoracao/dec6.svg') no-repeat bottom 40px right 40px;;
         border-radius: 0px 4px 4px 0px;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
        }
