--- a/css/home/vantagens.css
+++ b/css/home/vantagens.css
@@ -1,16 +1,17 @@
 #nossas-vantagens{
-    background-color: var(--c11);
+    background: var(--c11) url('../../img/icones/decoracao/dec10.svg') no-repeat bottom 100px left 20px;;
     box-shadow: inset 0 -70px rgb(255, 255, 255),
      inset  0 70px rgb(255, 255, 255) ;
   
 }
 
 .vantagens-container {
-max-width: 1400px;
+max-width: 1200px;
 padding: 0 20px;
 display: grid;
 grid-template-columns: 1fr 1fr;
 gap: 60px;
+margin: 0 auto;
 }
 
 
