--- a/css/bicicletas/bicicleta.css
+++ b/css/bicicletas/bicicleta.css
@@ -6,8 +6,11 @@
     border-radius: 4px;
     gap: 40px 32px;
     margin-bottom: 40px;
+    align-items: center;
 
 }
+
+
 
 
 .bike-interna-container{
