--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
 
-h1, h2, h3, h4, h5, h6, p, ul, li , body , a,blockquote{
+h1, h2, h3, h4, h5, h6, p, ul, li , body , a,blockquote,dl,dt,dd{
     margin: 0;
 }
 
-ul {
+ul,dl,dt,dd {
     padding: 0;
 }
 
